vue-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-spa
  labels:
    app: my-spa
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: my-spa
    spec:
      containers:
        - image: alikhil/my-spa:0.1
          name: spa
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 150m
              memory: 250Mi
