vue-nginx/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: my-spa-ing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - my-spa.example.com
      secretName: my-spa-cert-secret
  rules:
    - host: my-spa.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: my-spa
              servicePort: 80
